<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <FrameLayout
        android:id="@+id/setUp_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="80dp"
        android:background="@color/gray"
        android:visibility="gone"
        >

        <ImageButton
            android:id="@+id/settingBack_Btn"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/none"
            android:scaleType="fitXY"
            android:translationZ="1dp"
            android:layout_gravity="end"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:id="@+id/settingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_EN"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_gravity="center|top"
            android:layout_marginTop="30dp"
            />



            <TextView
                android:id="@+id/soundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setSound_EN"
                android:textSize="20dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="120dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="100dp"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="끄기"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="켜기"
                    />

            </LinearLayout>


        <TextView
            android:id="@+id/languageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setLanguage_EN"
            android:textSize="20dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/language_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:background="@color/gray2"
            />

    </FrameLayout>

    <ImageView
        android:id="@+id/setUp_Image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/setup"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_couch_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/couch_c"
            />
        <ImageView
            android:id="@+id/iv_couch_olor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/couch_olor"
            android:layout_marginTop="50dp"
            />
        <ImageView
            android:id="@+id/iv_couch_t"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/couch_t"
            />
        <ImageView
            android:id="@+id/iv_couch_ouch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/couch_ouch"
            android:layout_marginTop="50dp"
            />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        />

    <Button
        android:id="@+id/gameMode1_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode1Text_EN"
        android:textSize="18dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/blue"
        android:visibility="invisible"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        />

    <Button
        android:id="@+id/gameMode2_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode2Text_EN"
        android:textSize="18dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/blue"
        android:visibility="invisible"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        />

    <Button
        android:id="@+id/gameMode3_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode3Text_EN"
        android:textSize="18dp"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/blue"
        android:visibility="invisible"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        />


<!--    <Button-->
<!--        android:id="@+id/checkRanking_Btn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Ranking"-->
<!--        android:textSize="18dp"-->
<!--        android:paddingVertical="15dp"-->
<!--        android:layout_marginHorizontal="50dp"-->
<!--        android:backgroundTint="@color/blue"-->
<!--        android:visibility="gone"-->
<!--        />-->

<!--    <View-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        />-->

</LinearLayout>